bmt/contestdojo-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contestdojo-api
  namespace: bmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contestdojo-api
  template:
    metadata:
      labels:
        app: contestdojo-api
    spec:
      containers:
        - name: contestdojo-api
          image: ghcr.io/contestdojo/api:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
            requests:
              memory: "50Mi"
              cpu: "50m"
