bmt/contestdojo-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contestdojo-api
  namespace: bmt
spec:
  clusterIP: None
  selector:
    app: contestdojo-api
  ports:
    - port: 8000
