bmt/contestdojo-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contestdojo-api-ingress
  namespace: bmt
spec:
  ingressClassName: nginx
  rules:
    - host: api.contestdojo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contestdojo-api
                port:
                  number: 8000
